--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".messages.ChatLogActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".messages.LatestMessagesActivity"></meta-data>
-        </activity>
-        <activity android:name=".messages.NewMessageActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".messages.LatestMessagesActivity"></meta-data>
-        </activity>
-        <activity android:name=".registerlogin.RegisterActivity"></activity>
-        <activity android:name=".messages.LatestMessagesActivity">
+        <activity android:name=".registerlogin.SplashScreenActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".messages.ChatLogActivity"></activity>
+        <activity android:name=".messages.NewMessageActivity"></activity>
+        <activity android:name=".registerlogin.RegisterActivity" />
+        <activity
+            android:name=".messages.LatestMessagesActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity android:name=".registerlogin.LoginActivity" />
     </application>
