--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".registerlogin.SplashScreenActivity"
+        <activity android:name=".groups.NewGroupActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".groups.LatestGroups"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".registerlogin.SplashScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,13 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".messages.ChatLogActivity"></activity>
-        <activity android:name=".messages.NewMessageActivity"></activity>
+        <activity android:name=".messages.ChatLogActivity" />
+        <activity android:name=".messages.NewMessageActivity" />
         <activity android:name=".registerlogin.RegisterActivity" />
         <activity
             android:name=".messages.LatestMessagesActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".registerlogin.LoginActivity" />
     </application>
 
