--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
     implementation "com.xwray:groupie:2.1.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
